--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,11 +12,12 @@ peer:
   ports:
     - "7050:7050"
     - "7051:7051"
+    - "7052:7052"
     - "7053:7053"
   environment:
     - CORE_PEER_ADDRESSAUTODETECT=true
     - CORE_VM_ENDPOINT=unix:///var/run/docker.sock
-    - CORE_LOGGING_LEVEL=WARNING
+    - CORE_LOGGING_LEVEL=DEBUG
     - CORE_PEER_ID=vp0
     - CORE_SECURITY_ENABLED=true
     - CORE_PEER_PKI_ECA_PADDR=membersrvc:7054
@@ -44,8 +45,8 @@ nodesdk:
     - NODE_PATH=/usr/local/lib/node_modules
     # set to following to 'dev' if peer running id Developer mode
     - DEPLOY_MODE=dev
-  command: bash
-  #command: sh -c "sleep 50; CORE_CHAINCODE_ID_NAME=mycc CORE_PEER_ADDRESS=peer:7051 ./chaincode_example02"
+  #command: bash
+  command: sh -c "sleep 50; CORE_CHAINCODE_ID_NAME=mycc CORE_PEER_ADDRESS=peer:7051 ./chaincode_example02"
   stdin_open: true
   tty: true
   links:
